--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -47,6 +47,17 @@ services:
       - /sessions
     links:
      - 'db'
+     
+  services:
+    node:
+      image: alphonso/docker-express-api
+      container_name: express-api
+      ports:
+        - "8000:8000"
+      networks:
+        - docker-service
+      depends_on: 
+        - mariadb
 
 #  theiaide:
 #    # If there are changes to the Dockerfile update the tag
